karolin23lab8nuevo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 style="color: red;font-family:'Times New Roman', 'Times New Roman', Times, serif;font-size: 30px;">Bienvenidos a mi pagina web</h1>
-    <p style= "color: antiquewhite;"> Creando pagina con estilos en linea</p>
+    <p style= "color: ;"> Creando pagina con estilos en linea</p>
     <img src="logos.png">
     
 </body>
