karolin23lab8nuevo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>estilos en linea</title>
       <link rel="stylesheet" href="estilos.css">
+      <style>
+        <h1{
+            color: green;
+            font-family: 'Times New Roman', Times, serif;
+            font-size:30px;
+    }
+p{
+    color: blue;
+
+}
+img{
+    border: greenyellow;
+}
+    
 </head>
 <body>
-    <h1 style="color: red;font-family:'Times New Roman', 'Times New Roman', Times, serif;font-size: 30px;">Bienvenidos a mi pagina web</h1>
-    <p style= "color: ;"> Creando pagina con estilos en linea</p>
+    <h1 style=">Bienvenidos a mi pagina web</h1>
+    <p style= ""> Creando pagina con estilos en linea</p>
     <img src="logos.png">
     
 </body>
