correccionde mi error

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ img{
  </style>   
 </head>
 <body>
-    <h1 style=">Bienvenidos a mi pagina web</h1>
-    <p style= ""> Creando pagina con estilos en linea</p>
+    <h1 style="">Bienvenidos a mi pagina web</h1>
+    <p style= "">Creando pagina con estilos en linea</p>
     <img src="logos.png">
     
 </body>
