--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ p{
     color: blue;
 
 }
-img{
-    border: rgb(255, 47, 82);
-}
+img{ 
+    border: blue solid 8px;
+    }
  </style>   
 </head>
 <body>
