agregar lista de paises

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@ img{
     <h1 style="">Bienvenidos a mi pagina web</h1>
     <p style= "">Creando pagina con estilos en linea</p>
     <img src="logos.png">
+<h2>paises</h2>
+    <ol>
+        <li>colombia</li>
+        <li>España</li>
+        <li>Brasil</li>
+        <li>paris</li>
+    </ol>
     
 </body>
 </html>
