CAMBIO DE COLORE DE TITULO

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-size:30px;
     }
 p{
-    color: rgb(255, 0, 157);
+    color: rgb(27, 197, 89);
 
 }
 img{ 
@@ -27,12 +27,12 @@ img{
     <h1 style="">Bienvenidos a mi pagina web</h1>
     <p style= "">Creando pagina con estilos en linea</p>
     <img src="logos.png">
-<h2>paises</h2>
+<h2>Paises</h2>
     <ol>
         <li>colombia</li>
         <li>España</li>
         <li>Brasil</li>
-        <li>paris</li>
+        <li>Paris</li>
     </ol>
     
 </body>
