CAMBIO DE LETRAS EN MAYUSCULA

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ img{
     <img src="logos.png">
 <h2>Paises</h2>
     <ol>
-        <li>colombia</li>
+        <li>Colombia</li>
         <li>España</li>
         <li>Brasil</li>
         <li>Paris</li>
